--- a/AMCodeScanner_Example/AMCodeScanner_Example/Info.plist
+++ b/AMCodeScanner_Example/AMCodeScanner_Example/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera usage description here!</string>
 </dict>
 </plist>
